// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing afterCreateApp hook should use default settings if no settings are provided 1`] = `
[
  {
    "code": "# Add further files to ignore here as needed

# dependencies
/node_modules
/.pnp
.pnp.js
 
# testing
/coverage
 
# production
/build
/dist

#Server Specific
prisma/migrations/
package-lock.json
",
    "path": ".prettierignore",
  },
  {
    "code": "{
  "singleQuote": true,
  "arrowParens": "avoid",
  "trailingComma": "all"
}
",
    "path": ".prettierrc.json",
  },
]
`;

exports[`Testing afterCreateApp hook should use provided settings 1`] = `
[
  {
    "code": "# Add further files to ignore here as needed

# dependencies
/node_modules
/.pnp
.pnp.js
 
# testing
/coverage
 
# production
/build
/dist

#Server Specific
prisma/migrations/
package-lock.json
",
    "path": ".prettierignore",
  },
  {
    "code": "{
  "semi": false,
  "singleQuote": true,
  "trailingComma": "es5",
  "printWidth": 120,
  "tabWidth": 2
}
",
    "path": ".prettierrc.json",
  },
]
`;
